[gd_scene load_steps=4 format=3 uid="uid://c1iq2v1vjqxke"]

[ext_resource type="Script" path="res://scenes/additional/library_additional/game_system.gd" id="1_s1auu"]
[ext_resource type="Texture2D" uid="uid://ch1ins151k217" path="res://assets/placeholder.png" id="2_rtgvs"]
[ext_resource type="PackedScene" uid="uid://ceeoaxm7we356" path="res://scenes/additional/library_additional/game_system_additional/table_selector_button.tscn" id="3_vn1yx"]

[node name="game_system_view" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s1auu")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin" type="MarginContainer" parent="vbox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="hbox" type="HBoxContainer" parent="vbox/margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="refrect" type="ReferenceRect" parent="vbox/margin/hbox"]
clip_contents = true
custom_minimum_size = Vector2(160, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="texture" type="TextureRect" parent="vbox/margin/hbox/refrect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rtgvs")
expand_mode = 3
stretch_mode = 5

[node name="names" type="VBoxContainer" parent="vbox/margin/hbox"]
layout_mode = 2
alignment = 1

[node name="names" type="HBoxContainer" parent="vbox/margin/hbox/names"]
layout_mode = 2

[node name="system_name" type="Label" parent="vbox/margin/hbox/names/names"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "DnD 5e"

[node name="code_name" type="Label" parent="vbox/margin/hbox/names/names"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "(dnd-5e)"

[node name="author" type="Label" parent="vbox/margin/hbox/names"]
layout_mode = 2
text = "petraxeman"

[node name="content_count" type="Label" parent="vbox/margin/hbox/names"]
visible = false
layout_mode = 2
text = "Notes: 251"

[node name="variants" type="VBoxContainer" parent="vbox/margin/hbox"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 2

[node name="delete" type="Button" parent="vbox/margin/hbox/variants"]
layout_mode = 2
size_flags_vertical = 2
text = "DELETE"

[node name="refresh" type="Button" parent="vbox/margin/hbox/variants"]
layout_mode = 2
size_flags_horizontal = 8
text = "ðŸ”„"

[node name="create_new_table" type="Button" parent="vbox/margin/hbox/variants"]
layout_mode = 2
text = "Create new table"

[node name="scroll" type="ScrollContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="grid" type="GridContainer" parent="vbox/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 7
columns = 2

[node name="schema" parent="vbox/scroll/grid" instance=ExtResource("3_vn1yx")]
layout_mode = 2

[node name="delete_popup" type="Popup" parent="."]
title = "Delete"
initial_position = 1
size = Vector2i(187, 207)
borderless = false
always_on_top = true
extend_to_title = true
content_scale_mode = 1
content_scale_aspect = 4

[node name="margin" type="MarginContainer" parent="delete_popup"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="vbox" type="VBoxContainer" parent="delete_popup/margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="label" type="Label" parent="delete_popup/margin/vbox"]
layout_mode = 2
text = "You want to delete
\"dnd-5e\" system
Write dnd-5e in field"
horizontal_alignment = 1

[node name="lineedit" type="LineEdit" parent="delete_popup/margin/vbox"]
layout_mode = 2
placeholder_text = "dnd-5e"

[node name="hbox" type="HBoxContainer" parent="delete_popup/margin/vbox"]
layout_mode = 2

[node name="ok" type="Button" parent="delete_popup/margin/vbox/hbox"]
layout_mode = 2
text = "Ok"

[node name="cancel" type="Button" parent="delete_popup/margin/vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel"

[connection signal="pressed" from="vbox/margin/hbox/variants/delete" to="." method="_on_start_delete_pressed"]
[connection signal="pressed" from="vbox/margin/hbox/variants/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="vbox/margin/hbox/variants/create_new_table" to="." method="_on_create_new_table_pressed"]
[connection signal="pressed" from="delete_popup/margin/vbox/hbox/ok" to="." method="_on_ok_system_delition_pressed"]
[connection signal="pressed" from="delete_popup/margin/vbox/hbox/cancel" to="." method="_on_cancel_system_delition_pressed"]
